--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DB_DATABASE=laraport
 DB_USERNAME=dhimasarista
 DB_PASSWORD='#Magnolia22'
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
